added menu section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" href="./style.css">
+<link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+<link rel="icon" href="./pics/logo.png">
+
 <!-- JS only -->
 <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -46,11 +49,97 @@
 
       </div>
       </div>
+      <div class="container text-center foodie">
+        <h4>MENU</h4>
+
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 ">
+            <div class="col">
+                <div class="p-3">
+                    <div class="card">
+                        <img src="./pics/chickenpizza.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Chicken Pizza</h5>
+                          <p class="card-text">If you love BBQ chicken and you love pizza, why not put them together? This has long been a cult favorite of sports fans and college kids. </p>
+                        </div>
+                      </div>
+
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3">
+                    <div class="card">
+                        <img src="./pics/meatpizza.webp" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Meat Pizza</h5>
+                          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/cheesepizza.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Cheese Pizza</h5>
+                      <p class="card-text">It should be no shocker that a classic is the statistical favorite. Cheese pizza is one of the most popular choices. It will always be  simple.</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/veggiepizza.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Veggie</h5>
+                      <p class="card-text">When you want to jazz up your cheese pizza with color and texture, veggies are the perfect topping.Have a taste of it and also a testimony!.</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/peppizza.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Pepperoni Pizza</h5>
+                      <p class="card-text">There’s a reason this is one of the most popular types of pizza. Who doesn’t love biting into a crispy, salty round of pepperoni? Mixture of pure love in a meal.Its the best.</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/bacon2.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Bacon Pizza</h5>
+                      <p class="card-text">If pepperoni just isn’t enough, and you’re looking for a pie with a bit more heft, a meat pizza is a perfect and popular choice. Pile sausage for a hearty meal.</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/maagaretaa.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Margherita Pizza</h5>
+                      <p class="card-text">Deceptively simple, the Margherita pizza is made with basil, fresh mozzarella, and tomatoes. There’s a reason it’s  one of the most popular types of pizza</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
+              <div class="col">
+                <div class="p-3"><div class="card">
+                    <img src="./pics/supreeemee.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Supreme Pizza</h5>
+                      <p class="card-text">When you can’t decide which toppings to get, it’s time for the supreme pizza. The “supreme” refers to the litany of toppings that come scattered on these pies.</p>
+                    </div>
+                  </div>
+              </div>
+              </div>
 
 
-      <!-- <div class="text-center">
-        <button class="btn btn-success" >order</button>
-    </div> -->
+
 
     
 </body>
