added footer section

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               </div>
               </div>
 
-<div class="container verify">
+<div   id="order"  class="container mb-5 verify">
     <div class="image-section float-end">
         <img  class="img-fluid" src="./pics/pizaa boy.gif" alt="">
 
@@ -252,8 +252,8 @@
 
 
       <div class="form-group mt-3">
-        <button type="submit" class="btn  mt-1" >Complete your Order</button>
-        <button type="reset" class="btn  mt-1" >Make another order</button>  
+        <button type="submit" class="btn text-white  mt-1" >Complete your Order</button>
+        <button type="reset" class="btn text-white  mt-1" >Make another order</button>  
     </div>   
     </form>
    
@@ -262,7 +262,7 @@
   </div>
 </div>
 
-  <div class="container  mx-auto text-center hide">
+  <div class="container  mt-5 hide">
       <h3> ORDER SUMMARY</h3>
       <p id="pizzcustomer"></p>
       <p id="pizzSize"></p>
@@ -270,6 +270,34 @@
       <p id="pizzTopping"></p>
       <p id="pizzQuantity"></p>
       <p id="pizzTotal"></p>
+  </div>
+
+  <div class="container-fluid finish pt-5 text-center">
+      <footer>
+      <div class="container d-flex justify-content-around ">
+          <div class="contact">
+            <h3>Contact Information</h3>
+            <p>Dollarnis Pizza Inn</p>
+            <p>Phone:0718849600</p>
+            <p>Email:dollarnisinn@gmail.com</p>
+          </div>
+          <div class="follow">
+              <h3>Follow us </h3>
+              <a href="https://twitter.com/the_nickotee"  target="_blank"><i class="bi bi-twitter tweet"></i>
+                  <a href="https://web.facebook.com/nick.ke.7334" target="_blank"><i class="bi bi-facebook fb"></i>
+                      <a href="https://www.instagram.com/the_nickotee/" target="_blank"><i class="bi bi-instagram ig"></i>
+          </div>
+          <div class="download">
+            <a href="#"  target="_blank"> <img src="./pics/appstore.svg"  class=" img-fluid handles"></a>
+            <a href="#"  target="_blank"> <img src="./pics/playstore.svg"  class=" img-fluid handles"></a>
+
+
+              
+
+          </div>
+      </div>
+
+      </footer>
   </div>
 
 
