added table in order section

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <div class="col">
                 <div class="p-3">
                     <div class="card">
-                    <img src="./pics/cheesepizza.webp" class="card-img-top" alt="...">
+                    <img src="./pics/cheese pizza.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Cheese Pizza</h5>
                       <p class="card-text">It should be no shocker that a classic is the statistical favorite. Cheese pizza is one of the most popular choices. It will always be  simple.</p>
@@ -262,27 +262,52 @@
   </div>
 </div>
 
-  <div class="container  mt-5 hide">
+  <div class="container-fluid col-md-6 mb-5  mt-5 hide">
       <h3> ORDER SUMMARY</h3>
-      <p id="pizzcustomer"></p>
-      <p id="pizzSize"></p>
-      <p id="pizzCrust"></p>
-      <p id="pizzTopping"></p>
-      <p id="pizzQuantity"></p>
-      <p id="pizzTotal"></p>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Size</th>
+            <th scope="col">crust</th>
+            <th scope="col">Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+
+          </tr>
+        </tbody>
+      </table>
   </div>
 
   <div class="container-fluid finish pt-5 text-center">
       <footer>
       <div class="container d-flex justify-content-around ">
           <div class="contact">
-            <h3>Contact Information</h3>
+            <h3 class="text-white">Contact Information</h3>
             <p>Dollarnis Pizza Inn</p>
             <p>Phone:0718849600</p>
             <p>Email:dollarnisinn@gmail.com</p>
           </div>
           <div class="follow">
-              <h3>Follow us </h3>
+              <h3 class="text-white">Follow us </h3>
               <a href="https://twitter.com/the_nickotee"  target="_blank"><i class="bi bi-twitter tweet"></i>
                   <a href="https://web.facebook.com/nick.ke.7334" target="_blank"><i class="bi bi-facebook fb"></i>
                       <a href="https://www.instagram.com/the_nickotee/" target="_blank"><i class="bi bi-instagram ig"></i>
@@ -290,9 +315,6 @@
           <div class="download">
             <a href="#"  target="_blank"> <img src="./pics/appstore.svg"  class=" img-fluid handles"></a>
             <a href="#"  target="_blank"> <img src="./pics/playstore.svg"  class=" img-fluid handles"></a>
-
-
-              
 
           </div>
       </div>
