--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
           </a>
           <ul class="nav justify-content-end">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">ORDER</a>
+              <a class="nav-link active" aria-current="page" href="#order">ORDER</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Menu</a>
+              <a class="nav-link" href="#menu-area">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
+              <a class="nav-link" href="#contacts-area">Contact Us</a>
             </li>
            
           </ul>
@@ -51,7 +51,7 @@
       </div>
       </div>
       <div class="container text-center foodie">
-        <h4>MENU</h4>
+        <h2 id="menu-area">MENU</h2>
 
         <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 ">
             <div class="col">
@@ -188,7 +188,7 @@
 
 <div class="col-md-5 ">
 
-      <h2 class="text-center mb-3">ORDER NOW</h2>
+      <h2 class="text-center bouncing mb-3">ORDER NOW</h2>
 
     <form id="myform">
 
@@ -297,7 +297,7 @@
       </table>
   </div>
 
-  <div class="container-fluid finish pt-5 text-center">
+  <div id="contacts-area" class="container-fluid finish pt-5 text-center">
       <footer>
       <div class="container d-flex justify-content-around ">
           <div class="contact">
