--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Pizza Inn</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="./pics/logo.png" alt="" width="30" height="24" class="d-inline-block align-text-top">
@@ -271,9 +271,9 @@
           </div>
 
           <div class="form-group">
-            <input type="number" id="quantity" class="form-control mb-3" min="1" max="20" placeholder="Quantity" oninvalid="this.setCustomValidity('How many pizzas do you want?')" oninput="this.setCustomValidity('')"  required>
+            <input type="number" id="quantity" class="form-control mb-3" min="1" max="10" placeholder="Quantity" oninvalid="this.setCustomValidity('How many pizzas do you want?')" oninput="this.setCustomValidity('')"  required>
             </div>
-
+            <h5 class="text-white text-center">Toppings</h5>
             <div class="container d-flex justify-content-evenly">
               <div class="first">
             <div class="form-check " >
@@ -323,8 +323,8 @@
            <p id="errMessage"></p>
 
       <div class="form-group  text-center mt-3">
-          <button type="submit" id="btnClick" class="btn mt-1" >Complete your Order</button>
-          <button type="reset" class="btn mt-1" >Make another order</button>  
+          <button type="submit" id="btnClick" class="btn text-white mt-1" >Complete your Order</button>
+          <button type="reset" class="btn text-white mt-1" >Make another order</button>  
       </div>     
       </form>
   </div>
@@ -373,11 +373,6 @@
       </div>
 
   <div class="text-white">
-
-    <!-- Button trigger modal -->
-<!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
-  Launch demo modal
-</button> -->
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
