--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"> -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 <link rel="stylesheet" href="./style.css">
 <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
@@ -54,7 +54,7 @@
       <div class="container text-center foodie">
         <h2 id="menu-area">MENU</h2>
 
-        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-4 ">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 ">
             <div class="col">
                 <div class="p-3">
                     <div class="card">
@@ -181,8 +181,11 @@
               </div>
               </div>
 
-              <div class="container texted mb-5">
-                <table class="table table-bordered border-light text-white caption-top">
+              <div class="container mb-5 texted">
+                <div class="row row-cols-12 row-cols-md-12 row-cols-lg-12 ">
+                  <div class="row">
+
+                <table class="table table-bordered  border-light text-white caption-top">
                   <caption class="text-area" >MENU PRICE-LIST</caption>
                   <thead>
                     <tr>
@@ -229,10 +232,8 @@
                   </tr>
                   </tbody>
                 </table>
-
-
-
-
+              </div>
+              </div>
               </div>
 
 <div   id="order"  class="container mb-5 verify">
@@ -441,6 +442,9 @@
       </footer>
   </div>
 
+  <button class="btn btn-primary up-btn" data-scroll="up" type="button">
+    <i class="fa fa-chevron-up"></i>
+    </button>
 
 
 
