modified cart button

--- a/index.html
+++ b/index.html
@@ -333,8 +333,10 @@
 
 <div class="form-group  text-center mt-3">
   <button type="submit" id="btnClick" class="btn text-white mt-1 addMe" >Complete your Order</button>
-  <!-- <button type="submit" id="btnClick" class="btn text-white mt-1 addedMe" >Add Another Order</button> -->
+  <button type="submit" id="btnClick" class="btn text-white mt-1 addedMe" >Add Another Order</button>
+
 </div>     
+
         
       </form>
   </div>
