modified table section

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">1</th>
+            <th scope="row">#</th>
             <td id="pizzSize"></td>
             <td id="pizzCrust"></td>
             <td id="pizzTopping"></td>
